# wsconnect

./: .gitignore  LICENSE  README.md  pyproject.toml  windscribe_connect.py
src/wsconnect/: main.py
