[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsconnect"
version = "0.1.0"
description = "Windscribe fzf connector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer[all]"]

[project.scripts]
wsconnect = "wsconnect.main:app"

[tool.setuptools]
package-dir = { "" = "src" }
